--- a/scss/_bases.scss
+++ b/scss/_bases.scss
@@ -1,8 +1,10 @@
 html {
   font-size: 62.5%;
+  box-sizing: border-box;
 }
 
 body {
+  font-family: "PT Serif", serif;
   font-size: 1.6rem;
 }
 
@@ -19,11 +21,42 @@ ul {
   list-style: none;
 }
 
+ul li {
+  display: inline-block;
+}
+
 a {
   text-decoration: none;
   color: var(--text);
 }
 
+ul li a:hover {
+  text-decoration: underline;
+}
+
 img {
   max-width: 100%;
+}
+
+button {
+  min-width: 250px;
+  min-height: 45px;
+  letter-spacing: 0.5rem;
+  font-size: 1.8rem;
+  padding: 0.3rem 0.3rem;
+  border: none;
+  border: 1px solid #666;
+  border-radius: 3px;
+  color: white;
+  background: rgba(87, 101, 116, 0.5);
+  transition: 0.2s;
+}
+
+button:hover {
+  background: #f5f6fa;
+  color: #666;
+}
+
+p {
+  letter-spacing: 0.3rem;
 }
