--- a/scss/_bases.scss
+++ b/scss/_bases.scss
@@ -26,6 +26,7 @@ ul li {
 }
 
 a {
+  font-family: "Roboto", sans-serif;
   text-decoration: none;
   color: var(--text);
 }
@@ -46,17 +47,20 @@ button {
   padding: 0.3rem 0.3rem;
   border: none;
   border: 1px solid #666;
-  border-radius: 3px;
+  border-radius: 5px;
   color: white;
   background: rgba(87, 101, 116, 0.5);
   transition: 0.2s;
 }
 
 button:hover {
-  background: #f5f6fa;
+  border: 1px solid #0652dd;
+  background: rgba(245, 246, 250, 0.8);
   color: #666;
 }
 
 p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
   letter-spacing: 0.3rem;
 }
