--- a/scss/style.scss
+++ b/scss/style.scss
@@ -121,7 +121,40 @@ header {
   padding-top: 5rem;
 
   h2 {
-    font-size: 3rem;
+    font-size: 4rem;
     color: #0652dd;
+    padding-bottom: 3rem;
+  }
+
+  .content-portfolio {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    background-size: cover;
+
+    .cont-img {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 250px;
+      width: 350px;
+      margin-bottom: 3rem;
+    }
+    .cont-img i {
+      position: absolute;
+      color: white;
+      font-size: 2.5rem;
+    }
+    .cont-img img {
+      border-radius: 5px;
+      height: 100%;
+      width: 100%;
+      transition: 0.8s;
+    }
+    .cont-img img:hover {
+      transform: rotate(3deg);
+      filter: grayscale(90%);
+      cursor: pointer;
+    }
   }
 }
